--- a/test/fixtures/seasons.yml
+++ b/test/fixtures/seasons.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  season: 1
+  show: 1
   number: 1
-  airdate: 2014-06-09
 
 two:
-  season: 1
+  show: 1
   number: 1
-  airdate: 2014-06-09
